--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.25.0",
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
+    "morgan": "^1.10.0",
     "network": "^0.6.1",
     "node-dev": "^7.1.0",
     "node-telnet-client": "^1.0.0-8",
