--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
     "network": "^0.6.1",
