feat(UI):first console html

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "network": "^0.6.1",
     "node-dev": "^7.1.0",
     "node-telnet-client": "^1.0.0-8",
+    "path": "^0.12.7",
     "ping": "^0.4.1",
     "pm2": "^5.1.2",
     "rpio": "^2.4.2",
