--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "express": "^4.17.2",
+    "influx": "^5.9.3",
     "morgan": "^1.10.0",
     "network": "^0.6.1",
     "node-dev": "^7.1.0",
